# Agentic-AI-on-WatsonX-with-MCP-Gateway

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.original.md  docker-compose.yml  pyproject.toml
agentic_ai/: __init__.py  __main__.py  cli.py  server.py
agentic_ai/agents/: __init__.py  base.py  google_search.py  watsonx_crafter.py  wikipedia.py
agentic_ai/core/: __init__.py  config.py  exceptions.py  logger.py
agentic_ai/orchestrator/: __init__.py  coordinator.py  workflow.py
docs/: ContextForge_MCP_Gateway_Pro_Guide.docx  DEMO-GUIDE.md  README.md
docs/examples/: crewai-customer-support-example.py  crewai-mcp-gateway-example.py  langflow-mcp-integration-guide.md
docs/guides/: MCP-CrewAI-Langflow-Integration-Guide.md
docs/use-cases/: MCP-Gateway-Use-Cases-Solutions.md
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_coordinator.py  test_exceptions.py
